--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8012
+
+dubbo.application.name=provider
+dubbo.registry.address=zookeeper://106.13.215.47:2181
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
+dubbo.scan=com.anthony.service
